# IslandDefense-2D

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  README.md  main.cpp
opengl/: libGL.so.1.2.0  libGLU.so.1.3.1
opengl/headers/: freeglut_std.h  gl.h  glu.h  glx.h  glxproto.h  osmesa.h  wmesa.h
srcs/: Boat.cpp  Cannon.cpp  Displayable.cpp  Game.cpp  Game.hpp  Island.cpp  Pellet.cpp  Projectile.cpp  Projectiles.cpp  Stats.cpp  UI.cpp  Waves.cpp
srcs/helpers/: Alive.hpp  Axes.hpp  Color.hpp  DefeatScreen.hpp  Displayable.hpp  DisplayableShape.hpp  Entity.hpp  Game.hpp  Glut.hpp  Island.hpp  Movable.hpp  OpenGL.hpp  Shape.hpp
srcs/includes/: Boat.hpp  Cannon.hpp  Entities.hpp  Game.hpp  Island.hpp  Pellet.hpp  Projectile.hpp  Projectiles.hpp  Stats.hpp  UI.hpp  Waves.h  Waves.hpp
